# actix-web-demo

./: .env  .gitignore  Cargo.toml  README.md  Untitled Diagram.drawio  app.db  links.http
migrations/2020-09-13-005812_links/: up.sql
migrations/2020-09-13-073446_links/: down.sql
migrations/2020-09-14-144158_links/: down.sql  up.sql
migrations_mysql/2020-09-13-073446_links/: up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
