[package]
name = "demo"
version = "0.1.0"
authors = ["zxk7516 <zxk7516@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
diesel = {version="1.4.5", features=["r2d2", "postgres", "chrono"]}
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
chrono = { version="0.4.15", features=["serde"] }
